fix page build failed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <p><a href="http://travis-ci.org/tigefa4u/tigefa-node.js"><img alt="Build Status" src="https://secure.travis-ci.org/tigefa4u/tigefa-node.js.png?branch=master"/></a> <a href="https://sourcegraph.com/github.com/tigefa4u/tigefa-node.js"><img alt="Views in the last 24 hours" src="https://sourcegraph.com/api/repos/github.com/tigefa4u/tigefa-node.js/counters/views-24h.png"/></a></p>
 
-<h1 id="bower"><a href="#bower">AnchorLink</a>Bower</h1>
+<h1 id="tigefa"><a href="#tigefa">AnchorLink</a>Bower</h1>
 
 <p>tigefa on node.js is a upload tools for Dropbox, Google Drive, Box, DriveSync. It offers a generic, unopinionated
 solution to the problem of <strong>front-end package management</strong>, while exposing the
@@ -17,6 +17,6 @@ between different apps, and the dependency tree is flat.</p>
 <p>Bower depends on <a href="http://nodejs.org/">Node</a> and <a href="http://npmjs.org/">npm</a>. It&#39;s
 installed globally using npm:</p>
 
-{% highlight ssh %}
+<pre><code>
 npm install -g tigefa
-{% endhighlight %}
+</code></pre>
