fix page build failed

--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>tigefa node.js</title>
+    <meta name="description" content="learn skill node.js app">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="/css/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/syntax.css">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="http://getbootstrap.com/docs-assets/js/holder.js"></script>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
 
-<p><a href="http://travis-ci.org/tigefa4u/tigefa-node.js"><img alt="Build Status" src="https://secure.travis-ci.org/tigefa4u/tigefa-node.js.png?branch=master"/></a> <a href="https://sourcegraph.com/github.com/tigefa4u/tigefa-node.js"><img alt="Views in the last 24 hours" src="https://sourcegraph.com/api/repos/github.com/tigefa4u/tigefa-node.js/counters/views-24h.png"/></a></p>
+    <div id="hero">
+      <div class="wrap">
+        <div class="brand">
+          <img src="/img/tigefa-logo.png" class="logo" alt="tigefa node.js" />
+          <h1>tigefa node.js</h1>
+        </div>
+        <h3 class="tagline">learn skill node.js app</h3>
+        <h3>By Hand on Hands.</h3>
+        <a href="https://github.com/tigefa4u/tigefa-node.js" target="_blank" class="button github-button">View on GitHub</a>
+      </div>
+    </div>
+
+    <div id="content">
+      <div class="wrap">
+
+          <p><a href="http://travis-ci.org/tigefa4u/tigefa-node.js"><img alt="Build Status" src="https://secure.travis-ci.org/tigefa4u/tigefa-node.js.png?branch=master"/></a> <a href="https://sourcegraph.com/github.com/tigefa4u/tigefa-node.js"><img alt="Views in the last 24 hours" src="https://sourcegraph.com/api/repos/github.com/tigefa4u/tigefa-node.js/counters/views-24h.png"/></a></p>
 
 <h1 id="tigefa"><a href="#tigefa">AnchorLink</a>Bower</h1>
 
@@ -20,3 +51,15 @@ installed globally using npm:</p>
 <pre><code>
 npm install -g tigefa
 </code></pre>
+
+
+      </div>
+    </div>
+
+    <div id="footer">
+      <div class="wrap">
+        <p class="license">Code licensed under the <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+      </div>
+    </div>
+  </body>
+</html>
